# VulnerableProject

./: CMakeLists.txt  Makefile  README.md  sonar-project.properties
.github/workflows/: CWE-125.yml  CWE-22.yml  CWE-416.yml  CWE-476.yml  build.yml
CWE-125/: CMakeLists.txt  README.md  out_of_bounds_read_fix.diff
CWE-125/networking-exe/: client_main.cpp  server_main.cpp
CWE-125/networking-src/: CMakeLists.txt
CWE-125/networking-src/networking/: CharBuffer.hpp  (+1 more)
CWE-22/: CMakeLists.txt  README.md  path_traversal_fix.diff
CWE-22/executables/tstat/: CMakeLists.txt  daemon_main.cpp  tstat_main.cpp
CWE-22/src/tstat/: CMakeLists.txt
CWE-22/src/tstat/src/: AbortCommand.cpp  ArgParser.cpp  CommandLoader.cpp  CountingState.cpp  IdleState.cpp  ListCommand.cpp  ShowCommand.cpp  StartCommand.cpp  StopCommand.cpp  StoppedState.cpp  TimeCounter.cpp  utils.cpp
CWE-22/src/tstat/tstat/: AbortCommand.hpp  ArgParser.hpp  CommandError.hpp  CommandLoader.hpp  CountingState.hpp  ICommand.hpp  IState.hpp  IdleState.hpp  ListCommand.hpp  ShowCommand.hpp  StartCommand.hpp  StopCommand.hpp  StoppedState.hpp  TimeCounter.hpp  config.hpp  utils.hpp
CWE-22/submodules/networking/: CMakeLists.txt  README.md
CWE-22/submodules/networking/networking-exe/: CMakeLists.txt  client_main.cpp
CWE-22/submodules/networking/networking-src/: CMakeLists.txt
CWE-22/submodules/networking/networking-src/networking/: Client.hpp  IClient.hpp  IServer.hpp  Server.hpp  config.hpp  utils.hpp
CWE-22/submodules/networking/networking-src/src/: Client.cpp  Server.cpp  utils.cpp
CWE-22/test/: ArgParser-ut.cpp  CMakeLists.txt  StartCommand-ut.cpp  TimeCounter-ut.cpp  utils-ut.cpp
CWE-416/: README.md  use_after_free_fix.diff
CWE-416/shm/: CMakeLists.txt  Game.cpp  Map.cpp  Store.cpp  alcohol.cpp
CWE-476/: CMakeLists.txt  README.md  null_ptr_fix.diff
CWE-476/src/: Player.cpp
CWE-89/: CMakeLists.txt  README.md  cleanup.sh  db_init.sql  dockerfile  main.cpp  sql_injection_fix.diff  stack.yml
CWE-89/db_data/: dane_kontaktowe.csv  dane_logowania.csv  kategorie.csv  modele.csv  pracownik.csv  producenci.csv  produkty.csv  uprawnienia.csv  wymiary.csv
networking-src/networking/: Client.hpp  EndConnection.hpp  Server.hpp  config.hpp  utils.hpp
networking-src/src/: Client.cpp  Server.cpp  utils.cpp
(+1 files in other folders)
